minor perf tweaks in profiler recommended by FindBugs